NRP server wallet update
